k8s/vision-ai-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rf-detr-grpc
  namespace: john
spec:
  selector:
    app: isvc.rf-detr-predictor
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: sam2-grpc
  namespace: john
spec:
  selector:
    app: isvc.sam2-predictor
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
