k8s/vision-ai-yolox-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo26-grpc
  namespace: john
spec:
  selector:
    app: isvc.yolo26-predictor
  ports:
    - name: grpc
      port: 8001
      targetPort: 8001
